# code_nexus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.codenexus/: comments.json  relations.json  tags.json
.cunzhi-memory/: context.md  metadata.json  preferences.md
.github/workflows/: release.yml
docs/: PROJECT_COMPLETION_SUMMARY.md  RELEASE_GUIDE.md
docs/design/: MCP接口规范.md  README.md  code_nexus_system_design.md  协作方案.md  技术架构.md  数据存储设计.md  项目概述.md
docs/drafts/: idea.md
docs/guidelines/: document_specification.md  rust_mcp_ecosystem.md
docs/implementation/: MCP接口实现计划.md  README.md  implementation_guide.md  数据层实现计划.md  核心功能实现计划.md  测试计划.md  部署和集成计划.md
docs/requirements/: code_nexus_requirements.md  需求文档.md
examples/: multi_project_usage.rs
scripts/: release.ps1  release.sh
src/: error.rs  lib.rs  main.rs  models.rs  utils.rs
src/managers/: comment_manager.rs  mod.rs  relation_manager.rs  tag_manager.rs
src/mcp/: adapter.rs  mod.rs
src/query/: engine.rs  mod.rs
src/storage/: json_storage.rs  mod.rs
tests/: integration_tests.rs
