[package]
name = "code-nexus"
version = "0.1.0"
edition = "2021"
description = "CodeNexus 代码库关系管理工具"
authors = ["CodeNexus Team"]

[dependencies]
# MCP 核心依赖
rmcp = { version = "0.1", features = ["server", "transport-io"] }
rmcp-macros = "0.1"

# 异步运行时
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }

# 序列化和模式
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 文件系统和路径处理
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
